# osw-chatbot

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  README.md  docker-compose.example.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
Snippets/: copy_from_mat_o_lab.py  mcp_osw_tools.py  osw_get_main_slot.py  read_example_files.py  test.csv
data/: example.csv
data/mnt/: test.txt
snippets/: counter_button.css  local_storage.css  local_storage.js  local_storage.py
src/osw_chatbot/: .gitignore  llm.py  main.py  single_history_main.py  update_local_osw.py
src/osw_chatbot/chat/: chat_panel_component.py
src/osw_chatbot/graphrag/: common.py  indexer.py  langchain_graph_rag.py  query.py
src/osw_chatbot/panels/: terminal_mirror_panel.py
src/osw_chatbot/rag/: langchain_rag.py  osl_connector.py
src/osw_chatbot/structured_output/: api.py  llm.py  openai.py  test.py  util.py
src/osw_chatbot/tests/: multimodal.py  test_graphrag.py
src/osw_chatbot/toolcalling/: agent.py  counter_button.jsx  local_storage.jsx  osw_tools.py
src/osw_chatbot/websearch/: interative_websearch.py
src/osw_openai_api_wrapper/: main.py  openai.py  test.py  util.py
tests/osw_chatbot/: __init__.py  test_graphrag.py
tests/osw_chatbot/test-data/: lorem_ipsum.txt
