[project]
name = "osw-chatbot"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.0",
    "duckduckgo-search>=6.3.3",
    "fastapi>=0.115.2",
    "langchain>=0.3.21",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-graphrag>=0.0.9",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.3.14",
    "llm-sandbox>=0.2.3",
    "matplotlib>=3.10.1",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "panel>1.4.0",
    "param>=2.2.0",
    "playwright>=1.51.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyvirtualdisplay>=3.0",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "sparqlwrapper>=2.0.0",
    "textract-py3>=2.1.0",
    "tiktoken>=0.9.0",
    "typer>=0.15.2",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.31.1",
]

# Ruff format line length 79
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 79
indent-width = 4

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "ruff>=0.11.0",
]
