[project]
name = "osw-chatbot"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.0",
    "duckduckgo-search>=6.3.3",
    "fastapi>=0.115.2",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-graphrag>=0.0.9",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.3.14",
    "llm-sandbox[docker]>=0.2.3",
    "osw>=0.33.0",
    "panel>=1.6.2",
    "playwright>=1.51.0",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "textract-py3>=2.1.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.31.1",
]

# Ruff format line length 79
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 79
indent-width = 4
