[project]
name = "osw-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb==0.5.0",
    "crawl4ai>=0.6.3",
    "duckduckgo-search>=6.3.3",
    "fastapi>=0.115.2",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.68",
    "langchain-graphrag>=0.0.9",
    "langchain-ollama>=0.3.4",
    "langchain-openai>=0.3.27",
    "langchain-text-splitters>=0.3.8",
    "langgraph>0.5",
    "panel>1.4.0",
    "playwright>=1.53.0",
    "requests>=2.32.3",
    "textract-py3>=2.1.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.31.1",
]
